@@ -1,3 +1,8 @@
+2012-12-07  JJ Allaire <jj@rstudio.org>
+
+        * src/AttributesGen.cpp: use __ prefix for variables in generated
+        code; add RNGScope for attribute exported functions.
+
 2012-12-07 Romain Francois <romain@r-enthusiasts.com>
 
         * src/random.cpp: instantiations of random generators here
